--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Curso</title>
 </head>
 <body>
-    
+    <h1>Soy un titulo</h1>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus voluptatum facilis sequi tempora impedit quos dolore animi omnis culpa voluptatibus aperiam quas, tenetur consequuntur quidem, ducimus, ad explicabo perspiciatis? Eaque?</p>
 </body>
 </html>
