--- a/index.html
+++ b/index.html
@@ -1,14 +1,183 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curso</title>
-</head>
-<body>
-    <p>CONTENIDO</p>
-    <p>Ya se pudo hacer el push</p>
-    <h1>Soy un titulo</h1>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus voluptatum facilis sequi tempora impedit quos dolore animi omnis culpa voluptatibus aperiam quas, tenetur consequuntur quidem, ducimus, ad explicabo perspiciatis? Eaque?</p>
-</body>
+<html>
+  <head>
+    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin="" />
+    <link
+      rel="stylesheet"
+      as="style"
+      onload="this.rel='stylesheet'"
+      href="https://fonts.googleapis.com/css2?display=swap&amp;family=Epilogue%3Awght%40400%3B500%3B700%3B900&amp;family=Noto+Sans%3Awght%40400%3B500%3B700%3B900"
+    />
+
+    <title>Stitch Design</title>
+    <link rel="icon" type="image/x-icon" href="data:image/x-icon;base64," />
+
+    <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
+  </head>
+  <body>
+    <div class="relative flex h-auto min-h-screen w-full flex-col bg-white group/design-root overflow-x-hidden" style='font-family: Epilogue, "Noto Sans", sans-serif;'>
+      <div class="layout-container flex h-full grow flex-col">
+        <header class="flex items-center justify-between whitespace-nowrap border-b border-solid border-b-[#f4f2f0] px-10 py-3">
+          <div class="flex items-center gap-4 text-[#181411]">
+            <div class="size-4">
+              <svg viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <g clip-path="url(#clip0_6_543)">
+                  <path
+                    d="M42.1739 20.1739L27.8261 5.82609C29.1366 7.13663 28.3989 10.1876 26.2002 13.7654C24.8538 15.9564 22.9595 18.3449 20.6522 20.6522C18.3449 22.9595 15.9564 24.8538 13.7654 26.2002C10.1876 28.3989 7.13663 29.1366 5.82609 27.8261L20.1739 42.1739C21.4845 43.4845 24.5355 42.7467 28.1133 40.548C30.3042 39.2016 32.6927 37.3073 35 35C37.3073 32.6927 39.2016 30.3042 40.548 28.1133C42.7467 24.5355 43.4845 21.4845 42.1739 20.1739Z"
+                    fill="currentColor"
+                  ></path>
+                  <path
+                    fill-rule="evenodd"
+                    clip-rule="evenodd"
+                    d="M7.24189 26.4066C7.31369 26.4411 7.64204 26.5637 8.52504 26.3738C9.59462 26.1438 11.0343 25.5311 12.7183 24.4963C14.7583 23.2426 17.0256 21.4503 19.238 19.238C21.4503 17.0256 23.2426 14.7583 24.4963 12.7183C25.5311 11.0343 26.1438 9.59463 26.3738 8.52504C26.5637 7.64204 26.4411 7.31369 26.4066 7.24189C26.345 7.21246 26.143 7.14535 25.6664 7.1918C24.9745 7.25925 23.9954 7.5498 22.7699 8.14278C20.3369 9.32007 17.3369 11.4915 14.4142 14.4142C11.4915 17.3369 9.32007 20.3369 8.14278 22.7699C7.5498 23.9954 7.25925 24.9745 7.1918 25.6664C7.14534 26.143 7.21246 26.345 7.24189 26.4066ZM29.9001 10.7285C29.4519 12.0322 28.7617 13.4172 27.9042 14.8126C26.465 17.1544 24.4686 19.6641 22.0664 22.0664C19.6641 24.4686 17.1544 26.465 14.8126 27.9042C13.4172 28.7617 12.0322 29.4519 10.7285 29.9001L21.5754 40.747C21.6001 40.7606 21.8995 40.931 22.8729 40.7217C23.9424 40.4916 25.3821 39.879 27.0661 38.8441C29.1062 37.5904 31.3734 35.7982 33.5858 33.5858C35.7982 31.3734 37.5904 29.1062 38.8441 27.0661C39.879 25.3821 40.4916 23.9425 40.7216 22.8729C40.931 21.8995 40.7606 21.6001 40.747 21.5754L29.9001 10.7285ZM29.2403 4.41187L43.5881 18.7597C44.9757 20.1473 44.9743 22.1235 44.6322 23.7139C44.2714 25.3919 43.4158 27.2666 42.252 29.1604C40.8128 31.5022 38.8165 34.012 36.4142 36.4142C34.012 38.8165 31.5022 40.8128 29.1604 42.252C27.2666 43.4158 25.3919 44.2714 23.7139 44.6322C22.1235 44.9743 20.1473 44.9757 18.7597 43.5881L4.41187 29.2403C3.29027 28.1187 3.08209 26.5973 3.21067 25.2783C3.34099 23.9415 3.8369 22.4852 4.54214 21.0277C5.96129 18.0948 8.43335 14.7382 11.5858 11.5858C14.7382 8.43335 18.0948 5.9613 21.0277 4.54214C22.4852 3.8369 23.9415 3.34099 25.2783 3.21067C26.5973 3.08209 28.1187 3.29028 29.2403 4.41187Z"
+                    fill="currentColor"
+                  ></path>
+                </g>
+                <defs>
+                  <clipPath id="clip0_6_543"><rect width="48" height="48" fill="white"></rect></clipPath>
+                </defs>
+              </svg>
+            </div>
+            <h2 class="text-[#181411] text-lg font-bold leading-tight tracking-[-0.015em]">Panadería Delicias</h2>
+          </div>
+          <div class="flex flex-1 justify-end gap-8">
+            <div class="flex items-center gap-9">
+              <a class="text-[#181411] text-sm font-medium leading-normal" href="#">Inicio</a>
+              <a class="text-[#181411] text-sm font-medium leading-normal" href="#">Menú</a>
+              <a class="text-[#181411] text-sm font-medium leading-normal" href="#">Ubicaciones</a>
+              <a class="text-[#181411] text-sm font-medium leading-normal" href="#">Pedidos</a>
+              <a class="text-[#181411] text-sm font-medium leading-normal" href="#">Catering</a>
+              <a class="text-[#181411] text-sm font-medium leading-normal" href="#">Contacto</a>
+            </div>
+            <div class="flex gap-2">
+              <button
+                class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-xl h-10 px-4 bg-[#f4f2f0] text-[#181411] text-sm font-bold leading-normal tracking-[0.015em]"
+              >
+                <span class="truncate">Iniciar sesión</span>
+              </button>
+              <button
+                class="flex max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-xl h-10 bg-[#f4f2f0] text-[#181411] gap-2 text-sm font-bold leading-normal tracking-[0.015em] min-w-0 px-2.5"
+              >
+                <div class="text-[#181411]" data-icon="MagnifyingGlass" data-size="20px" data-weight="regular">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" fill="currentColor" viewBox="0 0 256 256">
+                    <path
+                      d="M229.66,218.34l-50.07-50.06a88.11,88.11,0,1,0-11.31,11.31l50.06,50.07a8,8,0,0,0,11.32-11.32ZM40,112a72,72,0,1,1,72,72A72.08,72.08,0,0,1,40,112Z"
+                    ></path>
+                  </svg>
+                </div>
+              </button>
+            </div>
+          </div>
+        </header>
+        <div class="px-40 flex flex-1 justify-center py-5">
+          <div class="layout-content-container flex flex-col max-w-[960px] flex-1">
+            <div class="flex flex-wrap justify-between gap-3 p-4"><p class="text-[#181411] tracking-light text-[32px] font-bold leading-tight min-w-72">Nuestro Menú</p></div>
+            <div class="pb-3">
+              <div class="flex border-b border-[#e6e0db] px-4 gap-8">
+                <a class="flex flex-col items-center justify-center border-b-[3px] border-b-[#181411] text-[#181411] pb-[13px] pt-4" href="#">
+                  <p class="text-[#181411] text-sm font-bold leading-normal tracking-[0.015em]">Pan</p>
+                </a>
+                <a class="flex flex-col items-center justify-center border-b-[3px] border-b-transparent text-[#897561] pb-[13px] pt-4" href="#">
+                  <p class="text-[#897561] text-sm font-bold leading-normal tracking-[0.015em]">Pasteles</p>
+                </a>
+                <a class="flex flex-col items-center justify-center border-b-[3px] border-b-transparent text-[#897561] pb-[13px] pt-4" href="#">
+                  <p class="text-[#897561] text-sm font-bold leading-normal tracking-[0.015em]">Galletas</p>
+                </a>
+              </div>
+            </div>
+            <h3 class="text-[#181411] text-lg font-bold leading-tight tracking-[-0.015em] px-4 pb-2 pt-4">Panes Artesanales</h3>
+            <div class="grid grid-cols-[repeat(auto-fit,minmax(158px,1fr))] gap-3 p-4">
+              <div class="flex flex-col gap-3 pb-3">
+                <div
+                  class="w-full bg-center bg-no-repeat aspect-square bg-cover rounded-xl"
+                  style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuBHjIP-eLi9XGCdjjcHnDry68LvFFPzYUJLdBSCFkpsitZVPdc9ES8pHNbZKfMFj6Fy5vHsp4kFlbvOKf4w6DiHMPnVKCf4skNyaJRfl7QtymOAoqndtlA7JRk0mqGCPUJOo8C6sTSMLUbZlJP8IalE1tJG78PVgsfXaOFEtOxyI_BlAXoFtQ7YezgOyIc9Rgx7xeGYSoyMyuokT0fFY14ldLgR91NcpzoYTJ74z5JnsDH-Hqliej1nzyJAGWgoshtwklhdE5mZibo");'
+                ></div>
+                <div>
+                  <p class="text-[#181411] text-base font-medium leading-normal">Pan de Masa Madre</p>
+                  <p class="text-[#897561] text-sm font-normal leading-normal">Pan de masa madre con corteza crujiente y miga suave.</p>
+                </div>
+              </div>
+              <div class="flex flex-col gap-3 pb-3">
+                <div
+                  class="w-full bg-center bg-no-repeat aspect-square bg-cover rounded-xl"
+                  style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuCJ6q8GtmUVkGti1ZVEh7-mdo2uooyv_NU3O-vLG9UzmTr4d3j_CH_AfvpOfnZEy4KY9Y51_Rov213JniYfrTROj4mO80ausRlwbZU2Vxn4BnL5cE2xqxK9RQYfaNOAo8XPimRO4_kujRJWir2yVYBorWmheSB8rKNN5svQd8Qzfn9NHr_-Irv31U7VLBLEnQox76k9iXYx4xBBNUumQ3kAGjKCcwO4XCu5gwnLFnve33JEW4KxRcgVus65VWEbXrJASnAWP2i7YQo");'
+                ></div>
+                <div>
+                  <p class="text-[#181411] text-base font-medium leading-normal">Baguette Francés</p>
+                  <p class="text-[#897561] text-sm font-normal leading-normal">Baguette tradicional francesa, ideal para sándwiches.</p>
+                </div>
+              </div>
+              <div class="flex flex-col gap-3 pb-3">
+                <div
+                  class="w-full bg-center bg-no-repeat aspect-square bg-cover rounded-xl"
+                  style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuDGEY1i3s5fQMJH3l5dUlsh-Fi1x1yGhD_m7ulzEJSPTdJIRrhYdgv3Y8BnpIPinYPlC6LTECBIGzCg5f05CRQ_WyPRLo3bfRyj0ZMIlJ_Retd5ATX8YtqIoPcIp5J6FLQ2wyWMxBEy33z1y56DFcXP8UaybJ-2xk-_yPhY8LS2aI5FRJNXDvEz6RsVsNtUVbBdJI5Vug3kmpUhJIBQf9oqKGXu6dUWI4sKFII9A4l4sxcF5Q_RXDSJI86ySTmNV86UolkMAZG4zg0");'
+                ></div>
+                <div>
+                  <p class="text-[#181411] text-base font-medium leading-normal">Pan de Centeno</p>
+                  <p class="text-[#897561] text-sm font-normal leading-normal">Pan de centeno denso y sabroso, perfecto para untar.</p>
+                </div>
+              </div>
+              <div class="flex flex-col gap-3 pb-3">
+                <div
+                  class="w-full bg-center bg-no-repeat aspect-square bg-cover rounded-xl"
+                  style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuDStu9khH2yapTbisvC44FClW3HHLsvOl5BJM3QYvz4euKB2FI3f9XMI-d4F5b5yDHaWmxNtrFhsUFBTp_s5CiLdvPk7uAfdksUfzRiC6CZwtpCAy27PLMob2BywV_58CmwvsojhJEBVbkdlqejNwmZKuIV4ckh2JFR5zrs8SPRZynoofUwy-jSmqXcj9irJZ4dspSYuA2d-_7azklG3r9htVNrvimc-YqXgBT5VpupDjJ6z1W-mUHBFgyBVu86sGwwVUF7yb_29I8");'
+                ></div>
+                <div>
+                  <p class="text-[#181411] text-base font-medium leading-normal">Pan Integral</p>
+                  <p class="text-[#897561] text-sm font-normal leading-normal">Pan integral nutritivo, rico en fibra y sabor.</p>
+                </div>
+              </div>
+            </div>
+            <h3 class="text-[#181411] text-lg font-bold leading-tight tracking-[-0.015em] px-4 pb-2 pt-4">Panes Dulces</h3>
+            <div class="grid grid-cols-[repeat(auto-fit,minmax(158px,1fr))] gap-3 p-4">
+              <div class="flex flex-col gap-3 pb-3">
+                <div
+                  class="w-full bg-center bg-no-repeat aspect-square bg-cover rounded-xl"
+                  style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuBdBYhKy1cBJqVvv19TiIA8YbuZrm-gmbFSRJp5jW0eKu5Do021EibGM_0NDcyJ-2w40N1nbNhl5UOVtaB8dgQgMT3Ya0gjnpb1PrcitMnh2C5BV3gZrg8h8OUS-x_9713vXEeLZ2e45gKamLMaUl3_RQAV8sPBoWgCs5r1EbIfEDb1C1ruF8gnZiYbV1Lk5VuHSkfvmVB-B-2jo5wtooEzdUiU79Z4eXjhp8Mtvldnqm-xg0pZs2wtKxIv_0bGe0r7-yvVF5ievqY");'
+                ></div>
+                <div>
+                  <p class="text-[#181411] text-base font-medium leading-normal">Pan de Canela</p>
+                  <p class="text-[#897561] text-sm font-normal leading-normal">Pan de canela suave y aromático, con remolinos de canela.</p>
+                </div>
+              </div>
+              <div class="flex flex-col gap-3 pb-3">
+                <div
+                  class="w-full bg-center bg-no-repeat aspect-square bg-cover rounded-xl"
+                  style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuBLWw6SlbCrPWtBkaTE6uWPyDr5-HBEb-t6dGKlb9j-4HzuwJAJhLcL2KjauuXRjMzxHNNFeRtiJSsepbg87uAf3NmvCRkrvqjxhipQXc3gJ3vAAy7Y2m7nisOp4usZEUDf4n0-01AfNAL5caEKodTU9f5lJcfemE3Tc-CNFBoR8_BpQAapwBcT0FlpTeR8HdbPMoEEHOjcSQtcDGnztUmJhutYMETkNKgHeiAiJ-YCjk0fEKmMzqsTj-kIQoBswxt6HTLUo5ULvyc");'
+                ></div>
+                <div>
+                  <p class="text-[#181411] text-base font-medium leading-normal">Pan de Plátano</p>
+                  <p class="text-[#897561] text-sm font-normal leading-normal">Pan de plátano húmedo y dulce, con trozos de plátano.</p>
+                </div>
+              </div>
+              <div class="flex flex-col gap-3 pb-3">
+                <div
+                  class="w-full bg-center bg-no-repeat aspect-square bg-cover rounded-xl"
+                  style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuDMIW76qBeCyem8gl40mfr0SeR-YwiTLZ6iSvPq3NGxkKGT-f7p8zJtl9yqkWTWq_TcVX3YaBC9WHAdVNC1hf_8pCBWBT2mLxc6c5y8yCFvF3g4Ug4PtRjmcRyQfjccFflFJSKnS948vAnOmWbct8CP3WaUUw90g19FnED51_28zBowmADssN1_w5Og6nUFbs0-bDYMG5iMSZNVA21Rxe0nfilGSnRoKYLsGAtItA-S9Yq6Bvb2rWxsj6Qd9-t3bBd_Q0JhctqB7e4");'
+                ></div>
+                <div>
+                  <p class="text-[#181411] text-base font-medium leading-normal">Pan de Calabaza</p>
+                  <p class="text-[#897561] text-sm font-normal leading-normal">Pan de calabaza especiado, perfecto para el otoño.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <footer class="flex justify-center">
+          <div class="flex max-w-[960px] flex-1 flex-col">
+            <footer class="flex flex-col gap-6 px-5 py-10 text-center @container">
+              <div class="flex flex-wrap items-center justify-center gap-6 @[480px]:flex-row @[480px]:justify-around">
+                <a class="text-[#897561] text-base font-normal leading-normal min-w-40" href="#">Inicio</a>
+                <a class="text-[#897561] text-base font-normal leading-normal min-w-40" href="#">Menú</a>
+                <a class="text-[#897561] text-base font-normal leading-normal min-w-40" href="#">Ubicaciones</a>
+                <a class="text-[#897561] text-base font-normal leading-normal min-w-40" href="#">Pedidos</a>
+                <a class="text-[#897561] text-base font-normal leading-normal min-w-40" href="#">Catering</a>
+                <a class="text-[#897561] text-base font-normal leading-normal min-w-40" href="#">Contacto</a>
+              </div>
+              <p class="text-[#897561] text-base font-normal leading-normal">© 2024 Panadería Delicias. Todos los derechos reservados.</p>
+            </footer>
+          </div>
+        </footer>
+      </div>
+    </div>
+  </body>
 </html>
